--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -341,9 +341,5 @@ jobs:
                ./gradlew -Pj=$((`nproc`+0)) bundleDebug
                mv ./app/build/outputs/bundle/experimentalRelease/*.aab ../cdda-${{ matrix.artifact }}-${{ needs.release.outputs.timestamp }}.aab     
           fi
-      - uses: actions/checkout@v3
-        with:
-            path: repo
       - run: |
-          cd ./repo
-          gh release upload cdda-experimental cdda-${{ matrix.artifact }}-${{ needs.release.outputs.timestamp }}.${{ matrix.ext }}
+          gh release upload cdda-experimental cdda-${{ matrix.artifact }}-${{ needs.release.outputs.timestamp }}.${{ matrix.ext }} --repo ${{ github.repository }} 
