--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -278,6 +278,7 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           runCmd: |
+            sudo apt-get install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools
             git config --global --add safe.directory /workspaces/Cataclysm-DDA
             make -j$((`nproc`+0)) TILES=1 LINTJSON=0 RELEASE=1 object_creator
       - name: zip Object Creator (windows)
