--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -313,11 +313,11 @@ jobs:
         if: runner.os == 'Linux' && matrix.android != 'none' && matrix.mxe == 'none'
         working-directory: ./android
         run: |
-          echo y | keytool -genkeypair -dname "cn=none, ou=none, o=none, c=none" -alias abc -keypass abc -keystore app/release.keystore -storepass abc -validity 20000
+          echo y | keytool -genkeypair -dname "cn=none, ou=none, o=none, c=none" -alias 000000 -keypass 000000 -keystore app/release.keystore -storepass 000000 -validity 20000
           cat <<EOT >> keystore.properties
-          storePassword=abc
-          keyPassword=abc
-          keyAlias=abc
+          storePassword=000000
+          keyPassword=000000
+          keyAlias=000000
           storeFile=app/release.keystore  
           EOT
           export UPSTREAM_BUILD_NUMBER="$((11581 + ${{ github.run_number }}))"
