--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -318,7 +318,7 @@ jobs:
           storePassword=000000
           keyPassword=000000
           keyAlias=000000
-          storeFile=app/release.keystore  
+          storeFile=./app/release.keystore  
           EOT
           export UPSTREAM_BUILD_NUMBER="$((11581 + ${{ github.run_number }}))"
           chmod +x gradlew
