--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ concurrency: release
 on:
   workflow_dispatch: 
   schedule:
-    - cron: "*/30 * * * *" 
+    - cron: "0 */4 * * *" 
   push:
     branches:
       - main
