--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,13 @@ jobs:
             ext: zip
             content: application/zip
             sound: 1
+          - name: Windows Object Creator x64
+            mxe: x86_64
+            artifact: windows-objectcreator-x64
+            android: none
+            os: ubuntu-latest
+            ext: zip
+            content: application/zip
           - name: Linux Tiles x64
             os: ubuntu-20.04
             mxe: none
@@ -115,6 +122,13 @@ jobs:
             artifact: osx-curses-universal
             ext: dmg
             content: application/x-apple-diskimage
+          - name: Linux object creator x64
+            os: ubuntu-20.04
+            mxe: none
+            android: none
+            artifact: linux-objectcreator-x64
+            ext: tar.gz
+            content: application/gzip
           - name: macOS Tiles Universal Binary (x64 and arm64)
             os: macos-12
             mxe: none
