--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: "Experimental Release"
-concurrency: release
+concurrency: 
+  group: release
+  cancel-in-progress: true
 on:
   workflow_dispatch: 
   schedule:
