--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -333,6 +333,7 @@ jobs:
         if: runner.os == 'Linux' && matrix.android != 'none' && matrix.mxe == 'none'
         working-directory: ./android
         run: |
+          mkdir ${{ github.workspace }}/app
           keytool -genkeypair -noprompt -dname "cn=none, ou=none, o=none, c=none" -alias 000000 -keypass 000000 -keystore ${{ github.workspace }}/app/release.keystore -storepass 000000 -validity 20000
           cat <<EOT >> keystore.properties
           storePassword=000000
