--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -177,6 +177,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
             repository: CleverRaven/Cataclysm-DDA
+      - run: |
+          shopt -s dotglob
+          rm -rf ./data/mods/Sky_Island/*
+      - uses: actions/checkout@v3
+        with:
+            repository: Standing-Storm/CDDA-Sky-Islands
+            path: data/mods/Sky_Island
       - name: Get soundpack
         if: matrix.sound == 1
         run: |
