--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -178,7 +178,7 @@ jobs:
         with:
             repository: CleverRaven/Cataclysm-DDA
       - run: |
-          rm -r -f ./data/mods/Sky_Island
+          rm --recursive --force ./data/mods/Sky_Island
       - uses: actions/checkout@v3
         with:
             repository: Standing-Storm/CDDA-Sky-Islands
