--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ concurrency:
 on:
   workflow_dispatch: 
   schedule:
-    - cron: "0 12 * * *" 
+    - cron: "0 12 * */4 *" 
   push:
     branches:
       - main
